Pagina Eventos Agregada

--- a/convencion.html
+++ b/convencion.html
@@ -17,13 +17,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Convencion</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4235719527"/>
-  <link rel="stylesheet" type="text/css" href="css/convencion.css?crc=414065387" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=52388634"/>
+  <link rel="stylesheet" type="text/css" href="css/convencion.css?crc=3817016267" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_convencion.css?crc=3793936292"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=56929551"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_convencion.css?crc=422450988" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_convencion.css?crc=186619169"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3991533229"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_convencion.css?crc=4079860174" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -133,6 +133,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u31588-4"><!-- content -->
           <p class="shared_content" data-content-guid="u31588-4_0_content">Expositores</p>
          </div>
+         <div class="borderbox transition grpelem" id="u31587"><!-- content --></div>
+        </div>
+        <div class="SubMenu MenuLevel1 borderbox clearfix" id="u31590"><!-- vertical box -->
+         <ul class="SubMenuView borderbox clearfix colelem" id="u31591"><!-- vertical box -->
+          <li class="MenuItemContainer borderbox clearfix colelem" id="u73501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u73506" href="conferencias.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u73516-4"><!-- content --><div id="u73516-3" class="shared_content" data-content-guid="u73516-3_content"><p id="u73516-2"><span id="u73516">Conferencias</span></p></div></div></a></li>
+         </ul>
         </div>
        </div>
        <div class="MenuItemContainer borderbox clearfix grpelem" id="u14302"><!-- vertical box -->
@@ -206,6 +212,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="MenuItemLabel NoWrap borderbox clearfix grpelem temp_no_id" data-orig-id="u31588-4"><!-- content -->
            <span class="placeholder" data-placeholder-for="u31588-4_0_content"><!-- placeholder node --></span>
           </div>
+          <div class="borderbox transition grpelem temp_no_id" data-orig-id="u31587"><!-- content --></div>
+         </div>
+         <div class="SubMenu MenuLevel1 borderbox clearfix temp_no_id" data-orig-id="u31590"><!-- vertical box -->
+          <ul class="SubMenuView borderbox clearfix colelem temp_no_id" data-orig-id="u31591"><!-- vertical box -->
+           <li class="MenuItemContainer borderbox clearfix colelem temp_no_id" data-orig-id="u73501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem temp_no_id" href="conferencias.html" data-orig-id="u73506"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem temp_no_id" data-orig-id="u73516-4"><!-- content --><span class="placeholder" data-placeholder-for="u73516-3_content"><!-- placeholder node --></span></div></a></li>
+          </ul>
          </div>
         </div>
         <div class="MenuItemContainer borderbox clearfix grpelem temp_no_id" data-orig-id="u14302"><!-- vertical box -->
@@ -243,7 +255,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="pu14792"><!-- group -->
      <div class="clip_frame grpelem temp_no_id" data-orig-id="u14792"><!-- image -->
-      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/mg_9611-crop-u147922.jpg?crc=4209504815" alt="" data-image-width="860" data-image-height="227" data-orig-id="u14792_img" src="images/blank.gif?crc=4208392903"/>
+      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/mg_9611-crop-u147922.jpg?crc=327530167" alt="" data-image-width="860" data-image-height="227" data-orig-id="u14792_img" src="images/blank.gif?crc=4208392903"/>
      </div>
      <span class="grpelem placeholder" data-placeholder-for="u31248_content"><!-- placeholder node --></span>
     </div>
@@ -294,6 +306,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="MenuItemLabel NoWrap borderbox clearfix grpelem temp_no_id" data-orig-id="u31588-4"><!-- content -->
            <span class="placeholder" data-placeholder-for="u31588-4_0_content"><!-- placeholder node --></span>
           </div>
+          <div class="borderbox transition grpelem temp_no_id" data-orig-id="u31587"><!-- content --></div>
+         </div>
+         <div class="SubMenu MenuLevel1 borderbox clearfix temp_no_id" data-orig-id="u31590"><!-- vertical box -->
+          <ul class="SubMenuView borderbox clearfix colelem temp_no_id" data-orig-id="u31591"><!-- vertical box -->
+           <li class="MenuItemContainer borderbox clearfix colelem temp_no_id" data-orig-id="u73501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem temp_no_id" href="conferencias.html" data-orig-id="u73506"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem temp_no_id" data-orig-id="u73516-4"><!-- content --><span class="placeholder" data-placeholder-for="u73516-3_content"><!-- placeholder node --></span></div></a></li>
+          </ul>
          </div>
         </div>
         <div class="MenuItemContainer borderbox clearfix grpelem temp_no_id" data-orig-id="u14302"><!-- vertical box -->
@@ -375,7 +393,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu14792"><!-- group -->
       <div class="clip_frame grpelem temp_no_id" data-orig-id="u14792"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/mg_9611-crop-u147924.jpg?crc=4277561200" alt="" data-image-width="556" data-image-height="147" data-orig-id="u14792_img" src="images/blank.gif?crc=4208392903"/>
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/mg_9611-crop-u147924.jpg?crc=4272396241" alt="" data-image-width="556" data-image-height="147" data-orig-id="u14792_img" src="images/blank.gif?crc=4208392903"/>
       </div>
       <span class="grpelem placeholder" data-placeholder-for="u31248_content"><!-- placeholder node --></span>
      </div>
@@ -419,7 +437,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="T-tulo-Principal clearfix placeholder" data-placeholder-for="u14802-4_content"><!-- placeholder node --></span>
     </div>
     <div class="clip_frame colelem temp_no_id" data-orig-id="u14792"><!-- image -->
-     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/mg_9611-crop-u147925.jpg?crc=3777199444" alt="" data-image-width="430" data-image-height="114" data-orig-id="u14792_img" src="images/blank.gif?crc=4208392903"/>
+     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/mg_9611-crop-u147925.jpg?crc=19942150" alt="" data-image-width="430" data-image-height="114" data-orig-id="u14792_img" src="images/blank.gif?crc=4208392903"/>
     </div>
     <span class="colelem placeholder" data-placeholder-for="u31248_content"><!-- placeholder node --></span>
     <span class="Subtitulo-2 clearfix colelem placeholder" data-placeholder-for="u14799-4_content"><!-- placeholder node --></span>
