--- a/galeria.html
+++ b/galeria.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Galeria</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=534443281"/>
-  <link rel="stylesheet" type="text/css" href="css/galeria.css?crc=302045167" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=3955512914"/>
+  <link rel="stylesheet" type="text/css" href="css/galeria.css?crc=4225777005" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_galeria.css?crc=4031558529"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_galeria.css?crc=4144460621"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -62,6 +62,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="MenuItemLabel NoWrap clearfix grpelem" id="u31524-4"><!-- content -->
            <p>Expositores</p>
           </div>
+          <div class="transition grpelem" id="u31526"><!-- content --></div>
+         </div>
+         <div class="SubMenu MenuLevel1 clearfix" id="u31527"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u31528"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u73649"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u73654" href="conferencias.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73664-4"><!-- content --><p>Conferencias</p></div></a></li>
+          </ul>
          </div>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u14323"><!-- vertical box -->
@@ -336,7 +342,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <img class="block ImageInclude" id="u10064_img" data-src="images/mg_9609-crop-u10064.jpg?crc=4070060341" src="images/blank.gif?crc=4208392903" alt="" data-width="1125" data-height="596"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u10084"><!-- image -->
-        <img class="block ImageInclude" id="u10084_img" data-src="images/mg_9611-crop-u10084.jpg?crc=498900064" src="images/blank.gif?crc=4208392903" alt="" data-width="1125" data-height="596"/>
+        <img class="block ImageInclude" id="u10084_img" data-src="images/mg_9611-crop-u10084.jpg?crc=3796021971" src="images/blank.gif?crc=4208392903" alt="" data-width="1125" data-height="596"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u10104"><!-- image -->
         <img class="block ImageInclude" id="u10104_img" data-src="images/mg_9614-crop-u10104.jpg?crc=295699267" src="images/blank.gif?crc=4208392903" alt="" data-width="1126" data-height="596"/>
