--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Registro</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=481963943" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=224312523" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_registro.css?crc=3925074953"/>
@@ -89,6 +89,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="MenuItemLabel NoWrap clearfix grpelem" id="u34829-4"><!-- content -->
         <p>Expositores</p>
        </div>
+       <div class="transition grpelem" id="u34831"><!-- content --></div>
+      </div>
+      <div class="SubMenu MenuLevel1 clearfix" id="u34832"><!-- vertical box -->
+       <ul class="SubMenuView clearfix colelem" id="u34833"><!-- vertical box -->
+        <li class="MenuItemContainer clearfix colelem" id="u73596"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u73601" href="conferencias.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73611-4"><!-- content --><p>Conferencias</p></div></a></li>
+       </ul>
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u34799"><!-- vertical box -->
